--- a/css/Destinations.css
+++ b/css/Destinations.css
@@ -74,6 +74,7 @@ main{
     position: relative;
     width: 1560px;
     height: 776px; 
+    margin-bottom: 5rem;
 }
 
 .container1 .img {
@@ -110,6 +111,99 @@ main{
     font-family: Josefin Sans;
     padding-top: 0.5rem;
 }
+
+.container2{
+    position: relative;
+    display: flex;
+    gap: 7rem;
+    flex-wrap: wrap;
+    margin-bottom: 9rem;
+}
+.container2 h2{
+    position: absolute;
+    color: #35374B;
+    font-size: 3.5rem;
+
+}
+
+.card{
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    height: 544;
+    width: 500px;
+}
+.card-detail{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    padding: 1.8rem;
+}
+
+.card-detail h3{
+    font-size: 2.1rem;
+    line-height: 1.3;
+}
+
+.card-detail p{
+    font-size: 1.1rem;
+    line-height: 1.2;
+    margin-top: 0.8rem;
+}
+
+.card-detail h4{
+    font-size: 1.5rem;
+}
+
+.calander {
+    display: flex;
+    align-items: center;
+    margin-top: 1.4rem;
+    gap: 1rem;
+}
+
+.calander img{
+    height: 25px;
+    width: 25px;
+}
+
+.card-detail .cta-btn{
+    display: flex;
+    align-items: center;
+    margin-top: 3.5rem;
+    gap: 1rem;
+}
+.cta-btn a{
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: #35374B;
+}
+.card-detail .cta-btn img{
+    height: 25px;
+    width: 25px;
+}
+.scroll{
+   position: absolute;
+   margin-top: 40%;
+   margin-left: 47%;
+}
+.scroll img{
+    height: 40px;
+    width: 40px;
+}
+
+.section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #EB662B;
+    border-radius: 2rem;
+    margin-bottom: 4rem;
+    padding: 4.4rem;
+}
+
+
 
 
 
