--- a/css/Destinations.css
+++ b/css/Destinations.css
@@ -199,10 +199,88 @@ main{
     align-items: center;
     background-color: #EB662B;
     border-radius: 2rem;
-    margin-bottom: 4rem;
-    padding: 4.4rem;
+    margin-bottom: 8rem;
+    padding: 6.2rem;
+}
+.left-col{
+    margin-left: 10rem;
+}
+.left-col h2 {
+    font-size: 8rem;
+    font-family: "Radley", serif;
 }
 
+.left-col span{
+    font-size: 8rem;
+    font-family: "Peralta", serif;
+}
+
+.left-col h3{
+    font-size: 2.5rem;
+}
+
+.left-col p{
+    font-size: 1.8rem;
+    margin-top: 2rem;
+}
+.right-col img{
+    height: 350px;
+    width: 500px;
+    margin-right: 10rem;
+}
+
+.section .cta-btn{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 4rem;
+    background-color: #FEF7F4;
+    padding: 1.5rem 3rem;
+    width: 250px;
+    border-radius: 1.6rem;
+}
+
+.left-col .cta-btn a{
+    font-size: 1.8rem;
+    margin-left: 2rem;
+}
+
+footer{
+    background-color: #FEF7F4;
+    padding: 10rem 10rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+footer .about-us,
+footer .contact,
+footer .social-media {
+  width: 30%;
+}
+
+footer .about-us h3,
+footer .contact h3,
+footer .social-media h3 {
+  margin-bottom: 10px;
+  font-size: 1.8rem;
+}
+
+.about-us p{
+    font-size: 1.1rem;
+    line-height: 1.5;
+}
+
+.contact h5{
+    font-size: 1.1rem;
+    line-height: 1.5;
+}
+footer .social-media img {
+    width: 30px;
+    height: 30px;
+}
 
 
 
